# shopsmart-customer-support-agent

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
src/: observability.py  tracing.py
src/agent/: runner.py
src/eval/: evaluator.py  run_eval.py  test_cases.py
src/mcp_server/: __main__.py  server.py
src/mcp_server/data/: mock_data.py
static/: index.html
tests/: conftest.py  test_app.py  test_mcp_tools.py  test_runner_helpers.py
